# DesafioRadar

./: .gitignore  Limpeza.md  README.md  build_notebook.py  build_script_seasonality.py  create_nb.py  create_nb_pt2.py  create_nb_route2.py  create_nb_route3.py  create_nb_route4.py  pyproject.toml  resumo.md
.agent/agents/: data-analyst.md  ml-engineer.md
.agent/workflows/: analyze-data.md  model-baseline.md
.streamlit/: config.toml
documentation/: PRD.md  architecture.md  commit-patterns.md
notebooks/: 4_Analise_Exploratoria_Olist.ipynb  AnaliseParcelamento.ipynb  Consolidado_Final.ipynb  clean_note_1.ipynb  main_analysis.ipynb  note_luis.ipynb
notebooks/Davi/: Analise_Estrategica_Ecommerce.ipynb  Analise_Sazonalidade.html  Analise_Sazonalidade.ipynb
notebooks/Edvan/: 03_analise_satisfacao.ipynb  04_analise_categorias.ipynb  05_analise_last_mile.ipynb  Relatorio_CustomerSuccess.md  Relatorio_InteligenciaMercado.md  Relatorio_LastMile.md  Relatorio_Regionalidade.md  Validacao_Mercado.md
notebooks/Gustavo/: 11_Machine_Learning.py  avaliacao_cliente.ipynb  ml_modelo_preditivo_classificacao.ipynb  vendedor_analise.ipynb
notebooks/Nikolas/: eda_logistica_olist_v2.ipynb  nikolas_notebook.ipynb
notebooks/SamuelVeronezi/: MonetaryAnalysis.ipynb  SamAnalysis.ipynb
notebooks/fabily_notes/: clean_note_1.ipynb  exploratory_notes.ipynb  note1.ipynb  note_1.ipynb
notebooks/romulo/: categoria_produto_executivo.ipynb  romulo.ipynb
public/: imagem1  imagem2
resumos/: py_analysis.txt
src/: app.py  style_utils.py  utils.py
src/etl/: data_cleaning.py  (+3 more)
(+36 files in other folders)
